# ml-comotion

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE_MODEL.md  README.md  comotion_pt_to_smpl_npz.py  demo.py  demo2.py  demo3.py  extract_joints_to_trc.py  get_pretrained_models.sh  postprocess_trc_files.py  pyproject.toml
output/: OTN.pt  OTN.txt  S_wide.pt  S_wide.txt  Sprint_Start_Example.pt  Sprint_Start_Example.txt  Test.pt  Test.txt  side.pt  side.txt  wide.txt
output/smpl_npz_output/: OTN_P1.npz  OTN_P12.npz  OTN_P13.npz  OTN_P14.npz  OTN_P15.npz  OTN_P16.npz  OTN_P17.npz  OTN_P18.npz  OTN_P19.npz  OTN_P2.npz  OTN_P20.npz  OTN_P22.npz  OTN_P23.npz  OTN_P24.npz  OTN_P3.npz  OTN_P5.npz  OTN_P7.npz  OTN_P8.npz
output/trc/: OTN_P1.trc
output/trc_processed/: OTN_P1_processed.trc
posetrack21_eval/: README.md  evaluate_mot.py
posetrack21_eval/datasets/: pt_sequence.py
posetrack21_eval/motmetrics/: mot.py
samples/: sample_info.txt
src/comotion_demo/data/smpl/: extra_smpl_reference.pt
src/comotion_demo/models/: __init__.py  comotion.py  detect.py  layers.py  refine.py
src/comotion_demo/models/backbones/: __init__.py  _registry.py  convnext.py
src/comotion_demo/utils/: __init__.py  dataloading.py  helper.py  smpl_kinematics.py  track.py
